Menuのテレポートから途中参加できるように

--- a/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
+++ b/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
@@ -12,6 +12,8 @@ game.start.betrayer.2=裏切り者は逃走者でありハンターである
 game.start.betrayer.3=あなたは逃走者を捕まえられ、ハンターはあなたを捕まえることもできる
 game.start.betrayer.4=外見は逃走者と何ら変わりはない、頑張ってくれたまえ
 game.start.betrayer.title=ハンターから逃げ逃走者を捕まえろ!
+game.join.success=ゲームに途中参加しました
+game.join.fail=現在はゲームに途中参加できません
 game.finish1=ゲームが終了しました
 game.finish2=逃走成功者は以下の通りです
 game.waiting.countdown=ゲーム開始まであと{%0}秒
@@ -48,8 +50,6 @@ command.nametag.success=ネームタグの変更に成功しました [{%0}]
 command.removeInventory.confirm=インベントリーを空にします、実行する場合はもう一度コマンドを実行してください
 command.removeInventory.success=インベントリーを空にしました
 command.spawn.success=リスポーンしました
-command.join.success=ゲームに途中参加しました
-command.join.fail=現在はゲームに途中参加できません
 item.use.fail.outOfGame=ゲーム時間外にはアイテムは使用できません
 item.use.fail.onlyForRunner=逃走者以外は使用できません
 item.use.fail.onlyForGamer=ゲームに参加中のプレイヤー以外使用できません
