Nametagの長さの条件をカラーコードを含まず10文字、含んで16文字以内に変更

--- a/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
+++ b/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
@@ -47,6 +47,7 @@ command.soundTest.usage=Usage : /soundtest <id>
 command.nametag.usage=Usage : /nametag <tag>
 command.nametag.tooLong=ネームタグが長すぎます
 command.nametag.reset=ネームタグをリセットしました
+command.nametag.invalid=ネームタグに無効な文字が含まれています
 command.nametag.success=ネームタグの変更に成功しました [{%0}]
 command.removeInventory.confirm=インベントリーを空にします、実行する場合はもう一度コマンドを実行してください
 command.removeInventory.success=インベントリーを空にしました
