Nametagクラスを作成し、設定メニュを実装

--- a/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
+++ b/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
@@ -45,10 +45,6 @@ command.scanWorldSurface.usage=/scan-world-surface <x1> <z1> <x2> <z2>
 command.setBaseBlock.success=ベースブロックを設置しました
 command.soundTest.usage=Usage : /soundtest <id>
 command.nametag.usage=Usage : /nametag <tag>
-command.nametag.tooLong=ネームタグが長すぎます
-command.nametag.reset=ネームタグをリセットしました
-command.nametag.invalid=ネームタグに無効な文字が含まれています
-command.nametag.success=ネームタグの変更に成功しました [{%0}]
 command.removeInventory.confirm=インベントリーを空にします、実行する場合はもう一度コマンドを実行してください
 command.removeInventory.success=インベントリーを空にしました
 command.spawn.success=リスポーンしました
@@ -123,6 +119,12 @@ system.password.always=パスワードはいつでも登録/変更できます
 system.item.buy.no_money=メタが足りません...
 system.item.buy.no_space=インベントリーに十分な空きがありません...
 system.item.buy.success=アイテムを購入しました!
+system.nametag.tooLong=ネームタグが長すぎます
+system.nametag.reset=ネームタグをリセットしました
+system.nametag.invalid=ネームタグに無効な文字が含まれています
+system.nametag.success=ネームタグの変更に成功しました [{%0}]
+system.setting.complete=設定を完了しました
+system.language.notFound=言語が見つかりませんでした
 server.regularly.0=チャンクの表示距離はスペックに余裕がある場合は16を推奨しています
 server.regularly.1=挨拶は、心をつなぐ、おまじない
 server.regularly.2=本サーバーにはDiscordやLobiグループやがあります。ぜひ参加してください!
