メッセージを追加

--- a/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
+++ b/src/kametan0730mc/RunForMoney2/lang/locale/jpn.ini
@@ -109,6 +109,7 @@ form.admin.user_list=オンラインユーザーリスト
 system.admin.user.operation.success=ユーザーの操作に成功しました
 system.ban.broadcast={%0}が{%1}を{%2}でBanしました
 system.chat.consecutivePosts=チャットの連続投稿はできません
+system.chat.tooLong=チャットが長すぎます
 system.server.down=サーバーが終了しました、またお越しください
 system.abyss.respawn=奈落に落ちたためリスポーンしました
 system.password.notMatch=パスワードの確認と一致しませんでした
